# Rumarkio

./: .gitignore  README.md  skeleton.theme.ts
firefox/: manifest.json  references.md
firefox/html/: loggedIn.html  loggedOut.html
firefox/js/: login.js  script.js
firefox/popup/: welcome.css  welcome.html  welcome.js
frontend/elm_client/: index.html
frontend/vfrontend/: README.md  package.json
json/: Insomnia_2022-10-02.json
marksbot/: Cargo.toml
marksbot/dev/: docker-compose.yml
marksbot/examples/: migrate.rs
marksbot/migrations/: 20241008072839_users.sql  20241008125505_user_profile.sql  20241008160834_res_session.sql  20241008162729_user_collections.sql  20241008163023_user_tags.sql  20241008163219_user_links.sql  20241008163927_user_folders.sql  20241008164038_links_tags.sql  20241008164817_collection_tags.sql  20241009061309_link_sessions.sql  20241010100702_links_collections.sql
marksbot/src/: database.rs  dto.rs  handlers.rs  helpers.rs  main.rs  middlewares.rs  models.rs
rsbackend/: Cargo.toml
rsbackend/src/: main.rs
rsbackend/src/handlers/: mod.rs  user.rs  workspace.rs
rsbackend/src/helpers/: auth.rs
rsbackend/src/router/: mod.rs
rsbackend/src/store/: mod.rs
rsbackend/src/store/supbase/: mod.rs  user.rs  workspace.rs
rsbackend/src/types/: database.rs  mod.rs  user.rs  workspace.rs
rumarkio/: 404.html  Cargo.toml  hello.html
rumarkio-frontend/: package.json  tailwind.config.cjs
rumarkio/src/: abstracts.rs  handlers.rs  lib.rs  macro_test.rs  main.rs  pool.rs  response.rs
server/: go.mod  go.sum  main.go
server/.devcontainer/: database.sql  devcontainer.json
server/bookmark/: models.go  persist.go  routes.go
server/collection/: models.go  persist.go  routes.go
server/dev/: docker-compose.yaml
server/jwtAuth/: auth.go
server/tag/: models.go  persist.go  routes.go
server/user/: models.go  persist.go  queue_handlers.go  (+1 more)
sk-svf/: bun.lockb  package.json
streamlogs/: 1676193761.891439.md
tester/: Cargo.toml
yewfrontend/: Cargo.toml  Trunk.toml  index.html
yewfrontend/src/: main.css  main.rs
yewfrontend/src/atoms/: mod.rs
yewfrontend/src/components/: footer.css  footer.rs  header.rs  home.rs  login_form.css  login_form.rs  mod.rs
yewfrontend/src/molecules/: custom_button.rs  custom_input.rs  mod.rs
yewfrontend/src/routes/: fancy_home.rs  home.css  home.rs  login.rs  mod.rs  not_found.rs  register.rs  user_home.rs
yewfrontend/src/types/api/: user.rs
(+24 files in other folders)
