[package]
name = "marksbot"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.83"
axum = {version="0.7.7"}
bcrypt = "0.15.1"
chrono = { version = "0.4.38", features = ["serde"] }
http = "1.1.0"
jsonwebtoken = "9.3.0"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
sqlx = { version = "0.8.2", features = ["postgres", "runtime-tokio", "chrono", "macros", "uuid"] }
tokio = "1.40.0"
tower-http = { version = "0.6.1", features = ["cors", "trace"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
uuid = { version = "1.10.0", features = ["v4" , "serde"] }
validator = "0.18.1"
futures = "0.3.31"
