[package]
name = "rsbackend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.5"
serde = { version= "1.0.202", features=["derive"] }
serde_json = "1.0.117"
tokio = "1.37.0"
tower-http = {version = "0.5.2", features=["trace"]} 
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
chrono =  {version="0.4.38", features=["serde"]}
sqlx = {version="0.7.4", features=["postgres", "runtime-tokio", "chrono"]}
bcrypt = "0.15"
validator = {version="0.18.1", features=["derive"]}
async-trait = "0.1.80"
